<resources>
    <string name="app_name">Sampoorna</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_menstrual_cycle">Track Menstrual Cycle</string>
    <string name="safety_sos">Safety SOS</string>
    <string name="alert">Alert</string>
    <string name="track_menstruation">Track Menstruation</string>
    <string name="helloUser">Hello, </string>
    <string name="sample_text">Sample Text</string>
    <string name="contacts">Contacts list</string>
    <string name="Date_Selection">Choose the Last Date</string>
    <string name="Countdown">Days Left</string>
    <string name="add_contact">Add Contact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="go_back_to_alert_menu">Go back to Alert Menu</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required For this feature</string>
    <string name="enable_now">Enable Now</string>
    <string name="show_dialog">Show Calendar</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_required">Permission Required</string>
    <string name="ok">OK</string>
    <string name="location_access_required">Location Access Required</string>
    <string name="edit_your_sos_message_here">Edit your SOS message here:</string>
    <string name="send_sos_text">Send SOS</string>
    <string name="send_sos_info_content">Save Contacts \nSet a default message \nand when you feel its an emergency, send SOS to the contacts</string>
    <string name="user_info_text">User info</string>
    <string name="user_name_text">Name</string>
    <string name="age_in_years">Age (in years)</string>
    <string name="email_address_text">Email Address</string>
    <string name="residence_address_text">Residence Address</string>
    <string name="hii_this_is_sampoorna">Hii, This is Sampoorna,</string>
    <string name="lets_get_started">Let\'s get started..</string>
    <string name="period_track_text">Easy Periods Tracking</string>
    <string name="period_track_info">Keep records of your periods easily and leave the rest on Sampoorna..</string>
    <string name="please_enter_sos_message">Please add sos message</string>
    <string name="sos_service_stoped">SOS Service Stopped</string>
    <string name="sos_service_started">SOS Service Started</string>
    <string name="no_contacted_added">No contacts added yet.</string>
    <string name="turn_on_location_message">Please turn on location service</string>
    <string name="hello">Hello,&#160;</string>
    <string name="enter_mensuration_last_date">Please enter the last date of \nthe menstrual period</string>
    <string name="days_left">Days Left"</string>
    <string name="enter_valid_date">Please enter a valid Date</string>
    <string name="do_not_worry_data_is_safe">Don\'t worry , your data will be safe with us :)</string>
    <string name="_enter_name_error">Please Enter Name Properly</string>
    <string name="enter_phone_number_error">Please enter phone number correctly</string>
    <string name="contact_added_sucess">Contact added successfully.</string>
    <string name="you_are_protected">You are protected</string>
    <string name="blogs">Blogs</string>
    <string name="self_care">Self Care</string>
    <string name="select_from_phone_contacts">Select from phone contacts</string>
    <string name="profile">Profile</string>
    <string name="e_mail">E-Mail</string>
    <string name="address">Address</string>
    <string name="blood_group">Blood Group</string>
    <string name="edit">Edit</string>
    <string name="years">&#160;years</string>
</resources>

