<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_text"
        android:layout_marginTop="@dimen/_30ssp"
        android:textSize="@dimen/_34ssp"
        android:fontFamily="@font/dongle"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/et_layout_name"
       android:layout_width="@dimen/_250sdp"
       android:layout_height="wrap_content"
       android:hint="@string/user_name_text"
       android:layout_marginStart="@dimen/_20sdp"
       android:layout_marginTop="@dimen/_20sdp"
       app:layout_constraintTop_toBottomOf="@id/tv_user_info"
       app:layout_constraintStart_toStartOf="parent">
       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/et_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="textPersonName"/>

   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/et_layout_age"
    android:layout_width="@dimen/_150sdp"
    android:layout_height="wrap_content"
    android:hint="@string/age_in_years"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_20sdp"
    app:layout_constraintTop_toBottomOf="@id/et_layout_name"
    app:layout_constraintStart_toStartOf="parent">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_email"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address_text"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/et_layout_age"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_residence"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:hint="@string/residence_address_text"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/et_layout_email"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_residence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>